# sdx

./: BEST.md  CLAUDE.md  Cargo.toml  HARDWARE.md  PLAN.md  TODO.md  build.rs  build.sh  config.example.toml  demo-config.toml  justfile  macos-instructions.md
.claude/: settings.local.json
.claude/commands/sd/: install.md
.claude/commands/sdx/: install.md
.github/workflows/: release.yml
doc/: rocm-rx6600.md  rocm-ubuntu-setup.md
doc/stable-diffusion.cpp/: building.md  cli.md
src/: api.rs  cli.rs  config.rs  embedded.rs  error.rs  lib.rs  main.rs  sd_cli.rs  server.rs
