[package]
name = "sdx"
version = "0.1.0-pre.2"
edition = "2024"
description = "Friendly CLI/server wrapper for sd-cli (stable-diffusion.cpp)"
license = "MIT"
repository = "https://github.com/saiden-dev/sdx"

[dependencies]
axum = "0.8"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
